[gd_scene load_steps=5 format=3 uid="uid://duspkatahqr5f"]

[ext_resource type="Script" uid="uid://d3bc8e2t7pxdu" path="res://Scripts/Inventory/Collectables/berry.gd" id="1_g25s4"]
[ext_resource type="Texture2D" uid="uid://bi1h2daaue5u1" path="res://Assets/Items/Tiny Wonder Forest items&objects/objects.png" id="2_cxk2i"]
[ext_resource type="Theme" uid="uid://y1l8bqsf7l6w" path="res://Assets/UI/Theme/in_world_theme.tres" id="3_v46gc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x0a6e"]
radius = 15.0

[node name="Berry" type="Area2D"]
script = ExtResource("1_g25s4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
scale = Vector2(2, 2)
texture = ExtResource("2_cxk2i")
region_enabled = true
region_rect = Rect2(16, 32, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x0a6e")

[node name="name" type="Label" parent="."]
visible = false
offset_left = 4.0
offset_top = 3.0
offset_right = 55.0
offset_bottom = 18.0
theme = ExtResource("3_v46gc")
text = "berry"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
